Resolves: tdf#123080 don't require wayland at runtime

if it existed at buildtime

Change-Id: I8a3285b7ee3b0556605b0c3d4b1fef222eb62d1a
Reviewed-on: https://gerrit.libreoffice.org/67691
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>