vcl/unx/gtk/gtkinst.cxx
@@ -86,7 +86,7 @@ extern "C"
         // for gtk3 it is normally built with X and Wayland support, if
         // X is supported GDK_WINDOWING_X11 is defined and this is always
         // called, regardless of if we're running under X or Wayland.
-        // We can't use (GDK_IS_X11_DISPLAY(pDisplay)) to only do it under
+        // We can't use (DLSYM_GDK_IS_X11_DISPLAY(pDisplay)) to only do it under
         // X, because we need to do it earlier than we have a display
 #if !GTK_CHECK_VERSION(3,0,0) || defined(GDK_WINDOWING_X11)
         /* #i92121# workaround deadlocks in the X11 implementation
